// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > renders "Loading..." while loading 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="2"
        style="text-align: center; padding: 16px; color: rgb(136, 136, 136);"
      >
        Loading...
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders "No data available" for empty data 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="2"
        style="text-align: center; padding: 16px; color: rgb(136, 136, 136);"
      >
        No data available
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders cell content correctly 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        Test Value 1
      </td>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        123
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders correctly with basic props (no data) 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="2"
        style="text-align: center; padding: 16px; color: rgb(136, 136, 136);"
      >
        No data available
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders correctly with data 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        Value 1
      </td>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        Value 2
      </td>
    </tr>
    <tr>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        Value 3
      </td>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        Value 4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders custom cell content using render prop 1`] = `
<table
  aria-label="Data table to show amount pledged and percentage funded"
  role="table"
>
  <thead>
    <tr>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 1
      </th>
      <th
        style="border: 1px solid #ddd; padding: 8px; text-align: left; background-color: rgb(244, 244, 244); font-weight: bold;"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        <span
          data-testid="custom-render"
        >
          Formatted: 20
        </span>
      </td>
      <td
        style="border: 1px solid #ddd; padding: 8px;"
      >
        test
      </td>
    </tr>
  </tbody>
</table>
`;
